objects/SFDocumentor__Lightning_Component__c.object
<CustomObject>
    <fields>
        <fullName>SFDocumentor__ApiVersion__c</fullName>
        <label>Api Version</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lightning_Components</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Created_by_Name__c</fullName>
        <label>Created by Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsExplicitImport__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Explicit Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__IsExposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Exposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Lightning_Components1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Last_Sync_Date__c</fullName>
        <label>Last SFDoc Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__LightingComponent_Id__c</fullName>
        <externalId>true</externalId>
        <label>LightingComponent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link_URL__c</fullName>
        <formula>HYPERLINK(SFDocumentor__Link__c , Name ,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Setup Link/URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__ManageableState__c</fullName>
        <label>Manageable State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__NamespacePrefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__SFDocumentorDesc__c</fullName>
        <label>SFDoc Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDocumentor__TargetConfigs__c</fullName>
        <label>TargetConfigs</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lightning Component Collection</label>
    <listViews>
        <fullName>SFDocumentor__All</fullName>
        <columns>NAME</columns>
        <columns>SFDocumentor__IsExposed__c</columns>
        <columns>SFDocumentor__ApiVersion__c</columns>
        <columns>SFDocumentor__Description__c</columns>
        <columns>SFDocumentor__Language__c</columns>
        <columns>SFDocumentor__ManageableState__c</columns>
        <columns>SFDocumentor__Link_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Lightning Component MasterLabel</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lightning Component Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>